# maquette

./: .claude  .dockerignore  .gitignore  .mcp.json  .ncurc.cjs  .oxfmtrc.json  .oxlintrc.json  CHANGESETS.md  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  turbo.json
.codex/: config.toml
.github/: README.md
apps/voxel-pipeline-ab/: .gitignore  QUICKSTART.md  README.md  package.json  pyproject.toml  requirements-cuda.txt  requirements.txt
apps/voxel-pipeline-ab/palettes/: cuban-beach.json  cyberpunk.json  mykonos.json
apps/voxel-pipeline-ab/skeletons/: arch.json  cypress.json  domed-building.json  flat-building.json  ground-cover.json  tree.json  wall-segment.json  well.json
apps/voxel-pipeline-ab/tests/: conftest.py  test_bake.py  test_chunk_merge.py  test_export_vox.py  test_gen.py  test_palette.py  test_remap.py  test_schema.py  test_skeletons.py  test_trellis_infer.py  test_validate_unit.py  test_voxelize.py
apps/voxel-pipeline-ab/voxel/: __init__.py  bake.py  bench.py  chunk_merge.py  comfy.py  concept.py  doctor.py  export_vox.py  gen.py  llm_voxels.py  palette.py  paths.py  remap.py  schema.py  setup_external.py  skeletons.py  trellis_infer.py  triposr_infer.py  validate_unit.py  voxelize.py
apps/voxel-pipeline-ab/workflows/: obj-concept-nolora.json  obj-concept.json
apps/web/src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
apps/web/src-tauri/icons/: icon.icns
apps/web/src-tauri/src/: lib.rs  main.rs
docs/: three-scene-react-migration.md
libs/: README.md
scripts/: version-bump.ts
(+264 files in other folders)
