[package]
name = "musicologia"
version = "0.0.0"
description = "Musicologia desktop render target"
authors = ["cbnsndwch LLC"]
edition = "2021"

[lib]
name = "musicologia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
